experiments/canary/external-envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: external-envoy-config
  namespace: cms-ml-production
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_grpc
        address:
          socket_address: { address: 0.0.0.0, port_value: 8001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: triton_vhost
                  domains: ["*"]
                  routes:
                  # (optional) header-based canary
                  - match:
                      prefix: "/"
                      headers:
                      - name: "x-canary"
                        exact_match: "1"
                    route:
                      cluster: triton_canary

                  # default weighted routing
                  - match: { prefix: "/" }
                    route:
                      weighted_clusters:
                        clusters:
                        - name: triton_stable
                          weight: 90
                        - name: triton_canary
                          weight: 10
              http_filters:
              - name: envoy.filters.http.router

      clusters:
      - name: triton_stable
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: triton_stable
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: supersonic-cck-triton
                    port_value: 8001

      - name: triton_canary
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: triton_canary
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: supersonic-cck-canary-triton
                    port_value: 8001
